# reverb

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  configure.py  oss_build.sh  requirements.txt  run_python_tests.sh
docker/: dev.dockerfile  release.dockerfile
examples/: demo.ipynb  frame_stacking.ipynb
reverb/: BUILD  __init__.py  checkpointer.py  checkpointer_test.py  client.py  client_test.py  dataset.py  dataset_test.py  distributions.py  errors.py  item_selectors.py  pattern_dataset.py  pattern_dataset_test.py  pybind.cc  pybind.pyi  pybind_test.py  rate_limiters.py  rate_limiters_test.py  replay_sample.py  replay_sample_test.py  reverb_exported_symbols.lds  reverb_types.py  reverb_version_script.lds  server.py  server_test.py  structured_writer.py  structured_writer_test.py  tf_client.py  tf_client_test.py  timestep_dataset.py  timestep_dataset_eager_test.py  timestep_dataset_test.py  trajectory_dataset.py  trajectory_dataset_eager_test.py  trajectory_dataset_test.py  trajectory_writer.py  trajectory_writer_test.py
reverb/cc/: BUILD  chunk_store.cc  chunk_store.h  chunk_store_test.cc  chunker.cc  chunker.h  chunker_test.cc  client.cc  client.h  client_test.cc  conversions.cc  conversions.h  errors.cc  errors.h  patterns.proto  priority_table.cc  priority_table.h  priority_table_item.h  priority_table_test.cc  rate_limiter.cc  rate_limiter.h  rate_limiter_test.cc  replay_client.cc  replay_client.h  replay_client_test.cc  replay_sampler.cc  replay_sampler.h  replay_sampler_test.cc  replay_service.proto  replay_writer.h  (+47 more)
reverb/pip_package/: BUILD  MANIFEST.in  README.md  build_pip_package.sh  build_wheel.py  hatch_build.py  pyproject.toml  requirements.in  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_13.txt  requirements_lock_3_9.txt  reverb_version.bzl  reverb_version.py  reverb_wheel.bzl  setup.py
tf/: BUILD.tpl  tf_configure.bzl
(+150 files in other folders)
